Canary/deploy-my-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-v2
  labels:
    app: my-app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2.0.0
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: my-app
        version: v2.0.0
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      creationTimestamp: null
    spec:
      containers:
      - name: my-app
        image: learnk8s/app:2.0.0
        ports:
          - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5
