Canary/deployment-prod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: v1
spec:
  minReadySeconds: 10
  replicas: 3
  template:
    metadata:
      labels:
        name: app
        version: "1.0.0"
    spec:
      containers:
      - name: application
        image: learnk8s/app:1.0.0
        ports:
          - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 5
